# mcp-spawn-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/spawn_agent/: cgroup.py  server.py  spawn_session.py  spawn_subagent.py  terminal.py
