[project]
name = "mcp-spawn-agent"
version = "0.1.0"
description = "A simple MCP server using FastMCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
]

[project.scripts]
mcp-spawn-agent = "spawn_agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spawn_agent"]
